# Algorithms-DataStructures

./: .gitignore  LICENSE
Graphs/app/: CMakeLists.txt  graf1.txt  graf2.txt  graf3.txt  main.cpp
Graphs/heap/: CMakeLists.txt  heap.h  heap.tpp
Heap/app/: CMakeLists.txt  main.cpp
Heap/src/: heap.h  heap.tpp
Heap/tests/: CMakeLists.txt  heapTests.cpp
Heap/utils/: utils.cpp
Sorting/app/: CMakeLists.txt  main.cpp
Sorting/sortingAlgorithms/: CMakeLists.txt  sort.cpp  sort.h  sort.tpp
Sorting/tests/: CMakeLists.txt  sortingTests.cpp
Sorting/utils/: utils.cpp  utils.h
Tree/app/: CMakeLists.txt  main.cpp
Tree/src/: AVLTree.h  AVLTree.tpp  BSTNode.h  BSTTree.h  BSTTree.tpp  CMakeLists.txt  placeholder.cpp
Tree/tests/: AVLTests.cpp  BSTtests.cpp  CMakeLists.txt
Tree/utils/: CMakeLists.txt  utils.cpp
