cmake_minimum_required(VERSION 3.16.0)
project(Heap)
set(HEADER_FILES heap.h)
set(SOURCE_FILES placeholder.cpp)
add_library(HeapLib STATIC ${HEADER_FILES} ${SOURCE_FILES})
set_target_properties(HeapLib PROPERTIES LINKER_LANGUAGE CXX)
set(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib)
target_compile_options(HeapLib PRIVATE -Wall -Wextra -pedantic -Werror)
target_include_directories(HeapLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})