cmake_minimum_required(VERSION 3.16.0)
project(SortingAlgorithms)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(SOURCE_FILES sort.cpp)
add_library(sortingAlgorithmsLib STATIC ${SOURCE_FILES})
set(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib)
target_compile_options(sortingAlgorithmsLib PRIVATE -Wall -Wextra -pedantic -Werror)
target_include_directories(sortingAlgorithmsLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})