cmake_minimum_required(VERSION 3.16.0)
project(SortingAlgorithms)
set(HEADER_FILES sort.h)
set(SOURCE_FILES placeholder.cpp)
add_library(sortingAlgorithmsLib STATIC ${HEADER_FILES} ${SOURCE_FILES})
set_target_properties(sortingAlgorithmsLib PROPERTIES LINKER_LANGUAGE CXX)
set(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib)
target_compile_options(sortingAlgorithmsLib PRIVATE -Wall -Wextra -pedantic -Werror)
target_include_directories(sortingAlgorithmsLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})