cmake_minimum_required(VERSION 3.16.0)
project(Tree)
set(HEADER_FILES BSTNode.h)
set(SOURCE_FILES placeholder.cpp)
add_library(TreeLib STATIC ${HEADER_FILES} ${SOURCE_FILES})
set_target_properties(TreeLib PROPERTIES LINKER_LANGUAGE CXX)
set(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib)
target_compile_options(TreeLib PRIVATE -Wall -Wextra -pedantic -Werror)
target_include_directories(TreeLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})