cmake_minimum_required(VERSION 3.16.0)
project(AlgorithmsUtils)
include(FetchContent)
FetchContent_Declare(matplotplusplus
        GIT_REPOSITORY https://github.com/alandefreitas/matplotplusplus
        GIT_TAG origin/master)
FetchContent_GetProperties(matplotplusplus)
if (NOT matplotplusplus_POPULATED)
    FetchContent_Populate(matplotplusplus)
    add_subdirectory(${matplotplusplus_SOURCE_DIR} ${matplotplusplus_BINARY_DIR} EXCLUDE_FROM_ALL)
endif ()
set(HEADER_FILES utils.h)
set(SOURCE_FILES utils.cpp)
add_library(algorithmsUtilslib STATIC ${HEADER_FILES} ${SOURCE_FILES})
target_link_libraries(algorithmsUtilslib PUBLIC matplot)
set_target_properties(algorithmsUtilslib PROPERTIES LINKER_LANGUAGE CXX)
set(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib)
target_compile_options(algorithmsUtilslib PRIVATE -Wall -Wextra -pedantic -Werror)
target_include_directories(algorithmsUtilslib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
